tela de cadastro finalizada

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-REACT_APP_FIREBASE_KEY="AIzaSyCXkHticUagK044ySW9POq_FzofWqVqh6k"
-REACT_APP_FIREBASE_DOMAIN="gerador-de-qr-code-3bdb9.firebaseapp.com"
-REACT_APP_FIREBASE_DATABASE="https://crud-4bf0e-default-rtdb.firebaseio.com"
-REACT_APP_FIREBASE_PROJECT_ID="gerador-de-qr-code-3bdb9"
-REACT_APP_FIREBASE_STORAGE_BUCKET="gerador-de-qr-code-3bdb9.appspot.com"
-REACT_APP_FIREBASE_SENDER_ID="659892188164"
-REACT_APP_FIREBASE_APP_ID="1:659892188164:web:3e2e941ff76e53fb45f151"
+REACT_APP_FIREBASE_KEY="AIzaSyD4bnIz5ELgaGcDB5hs_ip2oZVAvCiupIY"
+REACT_APP_FIREBASE_DOMAIN="trablho-qr-code.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID="trablho-qr-code"
+REACT_APP_FIREBASE_STORAGE_BUCKET="trablho-qr-code.appspot.com"
+REACT_APP_FIREBASE_SENDER_ID="872036014262"
+REACT_APP_FIREBASE_APP_ID="1:872036014262:web:f1eca72a2fd2f10c612e17"
